--- a/serenity-app/res/values-es/strings.xml
+++ b/serenity-app/res/values-es/strings.xml
@@ -164,5 +164,9 @@
     <string name="enables_video_queue_support_for_external_players_">Activa el soporte de cola de vídeo para los jugadores exteriores.</string>
     <string name="enable_video_queue_for_external_players">Habilitar cola vídeo para los jugadores externos</string>
     
+    <string name="prefs_advanced_options">Opciones avanzadas</string>
+    <string name="prefs_startup_boot_sum">Controla si la serenidad para Android lanza inmediatamente después de que el dispositivo haya terminado la secuencia de arranque. Útil para aquellos que quieren ofrecer una más de cine en casa como experiencia.</string>
+    <string name="prefs_auto_start_after_boot">Inicio automático después de Boot</string>
+    
     
 </resources>
