PR #220: Fix merge issues for overscan setup activity
This fixes a few merge issues for the overscan compensation activity. It also
adds some more instructions to the setup activity screen as well.

--- a/serenity-app/res/values/strings.xml
+++ b/serenity-app/res/values/strings.xml
@@ -194,7 +194,8 @@
     <string name="next_prev_behavior_summary"><![CDATA[What should the Next & Prev buttons do]]></string>
     <string name="overscan_swap">Swap sides</string>
     <string name="overscan_instructions">Use D-Pad to adjust top-left, and bottom-right until no blue is visible. Use
-        button to swap sides.
+        button to swap sides.  When finished press Back to save the changes.  You may use this instead of your
+        devices built in overscan compensation.  The devices built in compensation takes precedence.
     </string>
 
     <string-array name="skipListNames">
