--- a/serenity-app/res/values-de/strings.xml
+++ b/serenity-app/res/values-de/strings.xml
@@ -162,4 +162,48 @@
 <string name="prefs_startup_boot_sum">Serenity für Android sofort nach Start des Gerät starten.</string>
 <string name="prefs_auto_start_after_boot">Auto-Start nach dem Start</string>
 
+<string name="playing_episode_toast">Spielend %1$s %2$s: %3$s</string>
+<string name="no_unwatched_episode_toast">Keine unbeobachtet Episoden gefunden</string>
+
+<string name="Controls">Controls</string>
+<string name="skip_forward_time_title">Fast Forward überspringen Zeit</string>
+<string name="skip_forward_time_summary">Zeit, vorwärts zu überspringen, wenn FF-Taste gedrückt wird</string>
+<string name="skip_backward_time_title">REW überspringen Zeit</string>
+<string name="skip_backward_time_summary">Zeit, zurück zu springen, wenn REW-Taste gedrückt wird</string>
+<string name="next_prev_behavior_title">Vor / Zurück-Taste Verhalten</string>
+<string name="next_prev_behavior_summary"><![CDATA[Was sollten die Nächste und Vorherige Tasten tun]]></string>
+<string name="overscan_swap">Swap-Seiten</string>
+<string name="overscan_instructions">Verwenden D-Pad nach oben links und unten rechts ein, bis kein Blau sehen ist. Verwenden 
+   -Taste, um Seiten zu tauschen. Wenn Sie fertig sind drücken Sie auf Zurück, um die Änderungen zu speichern. Sie können diese verwenden, anstatt Ihren 
+   Geräte im Overscan-Kompensation gebaut. Die Entschädigung eingebauten Geräte Vorrang.
+</string>
+
+<string-array name="skipListNames">
+  <item>10 Sekunden</item>
+  <item>30 Sekunden</item>
+  <item>1 Minute</item>
+  <item>3 Minutes</item>
+</string-array>
+<string-array name="skipListValues">
+  <item>10000</item>
+  <item>30000</item>
+  <item>60000</item>
+  <item>180000</item>
+</string-array>
+
+<string-array name="nextPrevNames">
+  <item>Nächster Artikel in der Warteschlange</item>
+  <item>überspringen 5%</item>
+  <item>überspringen 10%</item>
+  <item>überspringen 5 minutes</item>
+  <item>überspringen 10 minutes</item>
+</string-array>
+<string-array name="nextPrevValues">
+  <item>queue</item>
+  <item>5%</item>
+  <item>10%</item>
+  <item>3000000</item>
+  <item>6000000</item>
+</string-array>
+
 </resources>
