--- a/serenity-app/res/values/strings.xml
+++ b/serenity-app/res/values/strings.xml
@@ -219,4 +219,16 @@
     <string name="mediacontroller_on_deck">"On Deck: "</string>
     <string name="drawer_open">Opened"</string>
     <string name="drawer_closed">Closed</string>
+    <string-array name="osd_display_time">
+    	<item>3 seconds</item>
+    	<item>5 seconds</item>
+    	<item>10 seconds</item>
+    	<item>15 seconds</item>
+    </string-array>
+    <string-array name="osd_display_time_values">
+    	<item>3000</item>
+    	<item>5000</item>
+    	<item>10000</item>
+    	<item>15000</item>
+    </string-array>
 </resources>
