Add initial server screen for selection of Emby or Plex.
Server screen is populated and will ask you to select a server.
Eventually it should remember which server you selected and will
take you to the appropriate screen.

--- a/serenity-app/src/main/res/values/strings.xml
+++ b/serenity-app/src/main/res/values/strings.xml
@@ -236,4 +236,5 @@
   <string name="android_tv_recommendations">Android TV Recommendations</string>
   <string name="contribute_ondeck_movies_and_episodes">Contribute OnDeck Movies and Episodes</string>
   <string name="androidtv_ondeck_recommendations">OnDeck Recommendations</string>
+  <string name="select_a_media_server_to_connect">Select a Media Server To Connect</string>
 </resources>
