--- a/serenity-app/src/main/res/values/strings.xml
+++ b/serenity-app/src/main/res/values/strings.xml
@@ -69,6 +69,12 @@
     <item>recentlyViewed</item>
     <item>unwatched</item>
   </string-array>
+
+  <string-array name="serverTypes">
+    <item>Plex</item>
+    <item>Emby</item>
+  </string-array>
+
   <string name="select_the_starting_category_filter_">Select the starting category filter for movies.</string>
   <string name="categories_summary_preference_description">Categories are used to select the starting filter when browsing movies. The default is All.</string>
   <string name="preferred_filter">Preferred Filter</string>
@@ -76,7 +82,7 @@
   <string name="server_settings_summary">A list of available plex media servers on the network. A preferred server takes priority.</string>
   <string name="preferred_ipaddress_summary">The domain name or IP Address for your main plex media server. This takes preference over any Discovered Servers selected.</string>
   <string name="preferred_server_address">Preferred Server Address</string>
-  <string name="default_port_summary">The port number for the server (usually 32400).</string>
+  <string name="default_port_summary">The port number for the server (usually 32400 for Plex and 8086 for Emby).</string>
   <string name="server_port">Server Port</string>
   <string name="discovered_servers_">Discovered Servers.</string>
   <string name="music_library">Music Library</string>
@@ -239,4 +245,5 @@
   <string name="select_a_media_server_to_connect">Select a Media Server To Connect</string>
   <string name="select_a_user_profile">Select a User Profile</string>
   <string name="refresh_servers">Refresh Servers</string>
+  <string name="manual_server_entry">Manual Server Entry</string>
 </resources>
